@@ -1,3 +1,10 @@
+2008-03-29  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: If the user request a cross-compilation,
+	then define PKG_CONFIG_LIBDIR so that it will look in directories
+	specidic to the target architecture.
+	* man/dpkg-buildpackage.1: Document this change and also the -t option.
+
 2008-03-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: LDFLAGS now defaults to an empty
